manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: check-my-ip
spec:
  selector:
    matchLabels:
      app: check-my-ip
  replicas: 1
  template:
    metadata:
      labels:
        app: check-my-ip
    spec:
      containers:
      - name: check-my-ip
        image: asia.gcr.io/k8s-day/check_my_ip8080:v1
        ports:
        - containerPort: 8080
      - name: check-my-ip2
        image: asia.gcr.io/k8s-day/check_my_ip8081:v1
        ports:
        - containerPort: 8081
