manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: check-my-ip
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"ports": {"80": "http-hc-config"}}'
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: check-my-ip
