manifest/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: check-my-ip
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: check-my-ip
          servicePort: 80
